--- a/pom.xml
+++ b/pom.xml
@@ -9,15 +9,28 @@
   <url>http://maven.apache.org</url>
   <properties>
     <tomcat.version>8.0.28</tomcat.version>
-<httpclient.version>4.5.2</httpclient.version>
-        <jackson.version>2.5.0</jackson.version>
-        <joda-time.version>2.7</joda-time.version>
-        <maven-surefire-plugin.version>2.18.1</maven-surefire-plugin.version>
-        <slf4j-api.version>1.7.10</slf4j-api.version>
-        <testng.version>6.8.17</testng.version>
-        <org.hamcrest.version>1.3</org.hamcrest.version>
+    <httpclient.version>4.5.2</httpclient.version>
+    <jackson.version>2.5.0</jackson.version>
+    <joda-time.version>2.7</joda-time.version>
+    <maven-surefire-plugin.version>2.18.1</maven-surefire-plugin.version>
+    <slf4j-api.version>1.7.10</slf4j-api.version>
+    <testng.version>6.8.17</testng.version>
+    <org.hamcrest.version>1.3</org.hamcrest.version>
   </properties>
+  <repositories>
+    <!--other repositories if any-->
+    <repository>
+        <id>project.local</id>
+        <name>project</name>
+        <url>file:${project.basedir}/repo</url>
+    </repository>
+  </repositories>
   <dependencies>
+    <dependency>
+      <groupId>com.okta</groupId>
+      <artifactId>okta-sdk</artifactId>
+      <version>1.0</version>
+    </dependency>
     <dependency>
         <groupId>org.apache.tomcat.embed</groupId>
         <artifactId>tomcat-embed-core</artifactId>
